--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -19,7 +19,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <p>Created by <a href="http://maelbrunet.com">Maël Brunet</a> - source code available on <a href="https://github.com/maeligg/console.love">GitHub</a>.</p>
+            <p>Created by <a href="http://maelbrunet.com">Maël Brunet and uvacoder</a> - source code available on <a href="https://github.com/maeligg/console.love">GitHub</a>.</p>
         </div>
     </footer>
 {% endblock %}
